# hotato

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  METHODOLOGY.md  NOTICE  README.md  README.pypi.md  SECURITY.md  action.yml  docker-compose.yml  hotato-report.html  llms-full.txt  llms.txt  pyproject.toml  server.json  sync_engine.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  banner.html  dependabot.yml  social-card.html
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  corpus_submission.yml  feature_request.md  first_catch.yml
.github/assets/: hotato-demo.tape  record-demo.sh
.github/workflows/: codeql.yml  docker.yml  hotato.yml  publish-pypi-oidc.yml  release.yml  tests.yml
adapters/: README.md  livekit_capture.py  pipecat_capture.py  retell_capture.py  twilio_capture.py  vapi_capture.py
atlas/contracts/: engagement-control-v1.json  turn-intent-discriminator-v1.json  utterance-addressee-gate-v1.json
atlas/implementations/: turn-intent-discriminator-generic.json  utterance-addressee-gate-generic.json
atlas/records/: addressed-backchannel-yielded.json  addressed-interruption-missed.json
ci/: github_action.yml
ci/action/: gate.py  pr_comment_post.py  summary.py
corpus/: README.md  label.schema.json  validate.py
corpus/classes/: README.md  build_classes.py  manifest.json  telephony_codec.py
corpus/examples/: sample-contribution.json
corpus/real/: .gitignore  LICENSES.md  README.md  build_real.py  manifest.json  sample-report.html
corpus/suites/: build_suites.py  manifest.json
corpus/vapi-defaults/: README.md  RESULTS.md  battery-result.json  build_vapi_defaults.py  manifest.json  render_funnel.py
deploy/: entrypoint.sh  healthcheck.py  hotato.env.example  seed-demo.py  verify-zero-egress.sh
deploy/control-plane/: .env.example  README.md  bootstrap.py  compose.yaml  install-runtime.py  run-production.py
dist_120/: hotato-1.2.0-py3-none-any.whl
docs/: ADAPTER-STATUS.md  ANALYZE.md  API.md  APPLY.md  ASSERTIONS.md  AUTOPSY.md  BAD-CALL-TO-CI.md  BENCH-SPEC.md  BENCHMARK-STACKS.md  BENCHMARK.md  CALLER-LOAD.md  CALLER-SIDECAR-PROTOCOL.md  CARDS.md  CI.md  COMPARE-WITH-QA-PLATFORMS.md  COMPARE.md  CONNECT.md  CONTRACTS.md  CONVERSATION-TEST.md  CORPUS-GOVERNANCE.md  COUNTEREXAMPLES.md  DIARIZE.md  DRIVE-A-CALL.md  EGRESS.md  EVIDENCE-CONTRACT.md  EVIDENCE-PACK.md  EXPLAIN.md  FIX-LOOP.md  FIX-PLANS.md  FIX-TRIAL.md  FULL-DUPLEX.md  GALLERY.md  GENERATIVE-CALLER.md  GETTING-STARTED.md  GUARDIAN-FLEET.md  INGEST.md  INVESTIGATE.md  LIFECYCLE.md  LIVEKIT-CALLER-SESSION.md  LOAD-AND-RECOVERY.md  (+34 more)
docs/assets/: hotato-cast.cast  hotato-demo-report.html
docs/case-studies/: README.md  vapi-01-hard-interruption.md
docs/evidence/: README.md  case-study-TEMPLATE.md  validation-plan.md
docs/releases/: v0.4.0.md  v0.4.1.md  v0.5.0.md
docs/scenarios/: browser-vs-pstn.md  dtmf-verification.md  echo-self-interruption.md  false-interruption-replay.md  load-and-recovery.md
examples/: README.md  render_examples.py
examples/bad-call-to-ci/: README.md
examples/counterexample/: README.md  refund-not-posted.scenario.json  refund-not-posted.test.json  run.sh
examples/demo/: README.md  run-demo.sh
examples/interrupted-tool-call/: README.md
examples/reference-agent/: Makefile  README.md  generate.py  run_reference.py  suite.json
examples/scenarios/: bc-01-repeated-backchannels.json  bc-02-midutterance-backchannel.json  bc-03-near-miss-floor-take.json  lat-01-prompt-response-prompt.json  lat-02-prompt-response-sluggish.json  lat-03-prompt-response-overeager.json  manifest.json
examples/set-and-forget/: README.md  sweep-nightly.sh
examples/verify-policy/: README.md  hotato.verify.yaml
implementation-notes/: D1-ACTION.md  D1-FAILURE-RECORD.md  D1-REGRESSION-AND-VIEW.md  D2-INTERACTION-LABELS.md  D3-CAPABILITY-ROUTING.md  D5-ATLAS.md  D6-PROVE-AND-STOP.md  DELTA-PRECHECK.md  P0.md  PRECHECK.md  STRATEGY-ADDENDUM.md
implementation-notes/evidence/: cold-path-evidence.json  human-battery-template.json
saydo/: state.json  test-run.json  test.json  transcript.json
scripts/: build_atlas.py  build_llms_full.py  build_pypi_readme.py  build_release.py  check_dist_no_leak.py  check_public_surfaces.py  cold_path_proof.py  copy_lint.py  gen_sbom.py  pr_comment.py  record_demo_gif.sh  regen_atlas_records.py  render_banner.py  render_card_assets.py  render_readme_assets.py  verify_delta.py
sdk/typescript/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
spec/: CANONICALIZATION.md  README.md  contract.schema.json
src/hotato/: __init__.py  _stats.py  acoustic.py  aggregate.py  analyze.py  apply.py  assert_.py  assert_packs.py  attest.py  autopsy.py  baseline.py  bench.py  benchmark.py  call_runtime.py  caller.py  caller_load.py  caller_session.py  candidate.py  capability_routing.py  capture.py  card.py  chat_sim.py  cli.py  compare.py  connections.py  console_store.py  console_worker.py  contract.py  conversation.py  conversation_test.py  core.py  diagnose.py  diarize.py  drive.py  drivecmd.py  dtmf_conformance.py  echo.py  (+65 more)
tests/: __init__.py  _drive_fakes.py  _failure_sources.py  _labels.py  _trial_audio.py  conftest.py  test_acoustic.py  test_action_consumer.py  test_adapter_http_smoke.py  test_adapters.py  test_analyze.py  test_analyze_promote_buttons.py  test_apply_clone.py  test_assert.py  test_assert_cli.py  test_assert_expanded_kinds.py  test_assert_formula.py  test_assert_order.py  test_assert_packs.py  test_atlas.py  test_audit_evidence_integrity.py  test_autopsy.py  test_backend.py  test_baseline_check_cli.py  test_bench_cli.py  test_benchmark.py  test_call_runtime.py  test_caller.py  test_caller_load.py  test_caller_reactive_barge_in.py  test_caller_session.py  test_canary.py  test_candidate.py  test_canonical_json_finite.py  test_capability_routing.py  test_capture.py  test_capture_pull_http_smoke.py  test_capture_user_agent.py  test_capture_vendor_shapes.py  test_card_cli.py  (+239 more)
(+451 files in other folders)
