[build-system]
# SPDX license expressions (PEP 639) need setuptools >= 77.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hotato"
version = "0.3.1"
description = "Turn-taking regression tests for voice agents. Same recording, same verdict, every time."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Attention Labs, Inc." }]
keywords = [
    "hotato", "voice-ai", "voice-agents", "evals", "barge-in", "turn-taking",
    "mcp", "agent-native", "observability", "reliability", "livekit",
    "pipecat", "vapi",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Testing",
]
# The core has ZERO required third-party dependencies: it is stdlib-only so it
# runs anywhere with `uvx` and adds no supply-chain surface. numpy is used only
# as an optional accelerator if it already happens to be importable.
dependencies = []

[project.optional-dependencies]
# The one-tool MCP server needs the MCP SDK. Kept optional so the CLI stays
# dependency-free and zero-install.
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=7", "jsonschema>=4", "setuptools>=77"]

# Per-stack capture extras. Vapi and Twilio capture use only stdlib (urllib +
# your API key), so `uvx hotato capture --stack vapi --call-id <id>` needs
# NOTHING extra -- these two extras are intentionally empty and exist so the
# documented `uvx 'hotato[vapi]'` / `hotato[twilio]` install still resolves.
# LiveKit and Pipecat LIVE capture run inside your own pipeline and genuinely
# need their frameworks; those are imported lazily and only on the live path.
vapi = []
twilio = []
livekit = ["livekit", "livekit-agents"]
pipecat = ["pipecat-ai"]
# OPTIONAL, NON-REFERENCE neural VAD cross-check (Silero VAD, MIT). Strictly
# opt-in via `--backend neural`; the zero-dependency energy core stays the
# reference for every published/golden number and is never affected by this
# extra. Inference executes through onnxruntime on CPU with the weights bundled
# in the silero-vad package (no download at run time); silero-vad itself depends
# on torch for its segmentation utilities, so this extra installs torch. Absent
# this extra, `--backend neural` errors cleanly, never falling back to energy.
neural = ["silero-vad>=5", "onnxruntime>=1.16", "numpy>=1.21"]
# Everything a contributor might want to exercise the live capture paths locally.
all = ["mcp>=1.2.0", "livekit", "livekit-agents", "pipecat-ai", "silero-vad>=5", "onnxruntime>=1.16", "numpy>=1.21"]

[project.scripts]
hotato = "hotato.cli:main"
hotato-mcp = "hotato.mcp_server:main"

# Pytest integration (the `hotato_score` fixture and the opt-in --hotato-suite
# session gate). Auto-discovered by pytest when hotato is installed; inert
# unless the fixture or flag is actually used, and needs nothing beyond pytest
# itself (the scoring core stays stdlib-only).
[project.entry-points.pytest11]
hotato = "hotato.pytest_plugin"

[project.urls]
Repository = "https://github.com/attenlabs/hotato"
Homepage = "https://hotato.dev"
"Open engine (upstream)" = "https://github.com/quantumCF/voice-agent-barge-in-tests"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hotato = [
    "data/scenarios/*.json",
    "data/audio/*.wav",
    "data/demo/failing/scenarios/*.json",
    "data/demo/failing/audio/*.wav",
    "schema/*.json",
]
