[build-system]
# SPDX license expressions (PEP 639) need setuptools >= 77.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hotato"
version = "1.5.3"
description = "Conversation QA for voice agents. Catch the calls that pass every text check but talk over the caller, skip a required disclosure, or claim a task that never happened. Self-hosted, offline, MIT."
readme = "README.pypi.md"
# Support policy: requires-python is lower-bounded only. There is no upper cap
# on purpose -- an upper pin (e.g. <3.14) locks installs out of new interpreters
# before they are tested, which packaging guidance discourages. The TESTED and
# supported matrix is Python 3.9 to 3.13 (the classifiers below and the
# `python-3.9 to 3.13` badge in the README); newer interpreters are best-effort
# until they are added to CI. So ">=3.9" is a floor, not an open-ended promise of
# every future Python. tests/test_python_support_policy.py holds this in lockstep.
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Attention Labs, Inc." }]
keywords = [
    "hotato", "conversation-qa", "voice-ai", "voice-agents", "ai-agents",
    "voice-agent-testing", "llm-eval", "evals", "regression-testing", "ci",
    "self-hosted", "offline", "barge-in", "turn-taking", "reliability",
    "observability", "mcp", "agent-native", "ollama", "livekit", "pipecat",
    "vapi", "retell",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
# The core has ZERO required third-party dependencies: it is stdlib-only so it
# runs anywhere with `uvx` and adds no supply-chain surface. numpy is used only
# as an optional accelerator if it already happens to be importable.
dependencies = []

[project.optional-dependencies]
# The one-tool MCP server needs the MCP SDK. Kept optional so the CLI stays
# dependency-free and zero-install.
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=7", "jsonschema>=4", "setuptools>=77"]

# Per-stack capture extras. Vapi and Twilio capture use only stdlib (urllib +
# your API key), so `uvx hotato capture --stack vapi --call-id <id>` needs
# NOTHING extra -- these two extras are intentionally empty and exist so the
# documented `uvx 'hotato[vapi]'` / `hotato[twilio]` install still resolves.
# LiveKit and Pipecat LIVE capture run inside your own pipeline and genuinely
# need their frameworks; those are imported lazily and only on the live path.
vapi = []
twilio = []
livekit = ["livekit", "livekit-agents"]
pipecat = ["pipecat-ai"]
# OPTIONAL, NON-REFERENCE neural VAD cross-check (Silero VAD, MIT). Strictly
# opt-in via `--backend neural`; the zero-dependency energy core stays the
# reference for every published/golden number and is never affected by this
# extra. Inference executes through onnxruntime on CPU with the weights bundled
# in the silero-vad package (no download at run time); silero-vad itself depends
# on torch for its segmentation utilities, so this extra installs torch. Absent
# this extra, `--backend neural` errors cleanly, never falling back to energy.
neural = ["silero-vad>=5", "onnxruntime>=1.16", "numpy>=1.21"]
# OPTIONAL asymmetric Ed25519 signing layer (hotato.sign): provenance/
# eligibility, never the reference scoring math, which this never touches.
# Strictly opt-in: `cryptography` is imported lazily, only inside
# keygen()/sign()/verify(), never at module import time, so a plain install
# stays zero-dependency and offline. Absent this extra, signing/verification
# raise a clean BackendUnavailable; nothing falls back silently to an
# unsigned or shared-secret (HMAC, see attest.py) tier.
# License: cryptography is dual-licensed Apache-2.0 OR BSD-3-Clause.
sign = ["cryptography>=41"]
# OPTIONAL, NON-REFERENCE mono-scorability front-end (speaker diarization).
# Strictly opt-in via `hotato run --mono call.wav --diarize`; the zero-dependency
# energy core AND the dual-channel path stay the gold reference and are never
# affected by these extras. Diarization models are GATED (pyannote on Hugging
# Face / Sortformer on NGC) and need a one-time token + conditions/license
# acceptance; after download inference runs offline. Absent the selected extra,
# `--diarize` errors cleanly and NEVER falls back to scoring raw mono. The
# [diarize] path raises the effective Python floor to >=3.10 (pyannote 4.x); the
# stdlib core stays >=3.9 -- this only constrains the optional path, like [neural].
# Licenses (log per FTO note; see docs/DIARIZE.md): pyannote-audio MIT (code),
# speaker-diarization-community-1 weights CC-BY-4.0 (attribution), segmentation-3.0
# MIT, wespeaker embedding CC-BY-4.0, torch BSD-3-Clause, torchaudio BSD-2-Clause,
# nemo-toolkit Apache-2.0, Sortformer STREAMING v2 CC-BY-4.0 (v1 offline is
# CC-BY-NC -> never ship it), pyannoteAI hosted terms (verify before egress).
diarize = ["pyannote.audio>=4.0", "torch>=2.8", "torchaudio>=2.8", "numpy>=1.21"]  # default (needs system ffmpeg)
diarize-sortformer = ["nemo-toolkit[asr]>=2.7", "torch>=2.8", "numpy>=1.21"]        # best self-hostable on phone, GPU
diarize-hosted = ["pyannoteai-sdk>=0.3"]                                            # hosted, egress opt-in
# OPTIONAL, NON-REFERENCE transcript CONTEXT layer (faster-whisper / CTranslate2).
# Strictly opt-in via `--transcribe`; the zero-dependency energy core stays the
# reference for every published/golden number and is never affected by this
# extra -- a transcript is context alongside the timing verdict, never an input
# to it. Runs fully offline/local once the chosen model is cached; no token
# needed (unlike [diarize]'s gated weights). Absent this extra, `--transcribe`
# errors cleanly and never skips silently or substitutes another backend.
# Licenses: faster-whisper MIT (code), CTranslate2 MIT (inference runtime),
# Whisper model weights MIT (OpenAI).
transcribe = ["faster-whisper>=1.0"]
# OPTIONAL model-judge (rubric.v1) lane (hotato.rubric). The DEFAULT judge is a
# LOCAL Ollama daemon reached with only the stdlib (urllib) -- so `hotato rubric
# run` and the conversation-test rubric lane need NOTHING extra; this extra is
# intentionally empty and exists so the documented `uvx 'hotato[judge]'` install
# still resolves and to name the capability. Zero egress on the default path;
# the hosted judge (--judge-egress-opt-in) is also stdlib-only. Optionally
# signing a cached verdict as a 'judge-record' reuses the [sign] extra's
# cryptography (Ed25519); absent it, an HMAC 'human-shared' tier (stdlib) or an
# unsigned verdict is used -- never a hollow signature.
judge = []
# Everything a contributor might want to exercise the live capture paths locally.
all = ["mcp>=1.2.0", "livekit", "livekit-agents", "pipecat-ai", "silero-vad>=5", "onnxruntime>=1.16", "numpy>=1.21", "cryptography>=41", "pyannote.audio>=4.0", "torch>=2.8", "torchaudio>=2.8", "faster-whisper>=1.0"]

[project.scripts]
hotato = "hotato.cli:main"
hotato-mcp = "hotato.mcp_server:main"

# Pytest integration (the `hotato_score` fixture and the opt-in --hotato-suite
# session gate). Auto-discovered by pytest when hotato is installed; inert
# unless the fixture or flag is actually used, and needs nothing beyond pytest
# itself (the scoring core stays stdlib-only).
[project.entry-points.pytest11]
hotato = "hotato.pytest_plugin"

[project.urls]
Homepage = "https://hotato.dev"
Documentation = "https://github.com/attenlabs/hotato/tree/main/docs"
Repository = "https://github.com/attenlabs/hotato"
Changelog = "https://github.com/attenlabs/hotato/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/attenlabs/hotato/issues"
"Open engine (upstream)" = "https://github.com/quantumCF/voice-agent-barge-in-tests"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hotato = [
    "data/evidence_language.json",
    "data/scenarios/*.json",
    "data/simulate/*.json",
    "data/audio/*.wav",
    "data/demo/failing/scenarios/*.json",
    "data/demo/failing/audio/*.wav",
    "schema/*.json",
    "templates/webhook/*.tmpl",
    "templates/webhook/fragments/*.py",
]

[tool.pytest.ini_options]
# Collect ONLY the tests directory. Two shipped SOURCE modules have names that
# match pytest's default discovery globs -- src/hotato/test_run.py (test_*.py) and
# src/hotato/conversation_test.py (*_test.py) -- so a bare `python -m pytest` (what
# CI and the sdist-guard run) would otherwise try to import them as test modules and
# fail collection. testpaths bounds discovery to tests/ and makes CI match a local
# `pytest tests/`.
testpaths = ["tests"]
